--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
-    "git-commit-msg-linter": "^3.0.3"
+    "@types/node": "^14.14.35",
+    "git-commit-msg-linter": "^3.0.3",
+    "ts-node-dev": "^1.1.6",
+    "typescript": "^4.2.3"
   }
 }
