--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,19 +1,9 @@
 {
-    "env": {
-        "es2021": true,
-        "node": true
-    },
-    "extends": [
-        "airbnb-base"
-    ],
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-        "ecmaVersion": 12,
-        "sourceType": "module"
-    },
-    "plugins": [
-        "@typescript-eslint"
-    ],
-    "rules": {
-    }
+  "extends":["airbnb-base"],
+  "parserOptions": {
+    "project":"./tsconfig.json"
+  },
+  "rules": {
+    "@typescript-eslint/strict-boolean-expressions":"off"
+  }
 }
