--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "husky": {
-
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "devDependencies": {
     "@types/node": "^14.14.35",
@@ -17,13 +19,11 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.1",
     "git-commit-msg-linter": "^3.0.3",
+    "husky": "^5.1.3",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
     "prettier-eslint": "^12.0.0",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.3"
-  },
-  "dependencies": {
-    "husky": "4"
   }
 }
