--- a/package.json
+++ b/package.json
@@ -11,6 +11,13 @@
       "pre-commit": "npm run pretest"
     }
   },
+
+
+  "lint-staged":{
+    "*.ts":[ "eslint --fix"]
+
+  },
+
   "devDependencies": {
     "@types/node": "^14.14.35",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
