--- a/package.json
+++ b/package.json
@@ -3,10 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
-
-
-
   "devDependencies": {
+    "@types/jest": "^26.0.20",
     "@types/node": "^14.14.35",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
@@ -18,10 +16,15 @@
     "eslint-plugin-prettier": "^3.3.1",
     "git-commit-msg-linter": "^3.0.3",
     "husky": "^5.1.3",
+    "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
     "prettier-eslint": "^12.0.0",
+    "ts-jest": "^26.5.3",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.3"
+  },
+  "scripts": {
+    "test": "jest"
   }
 }
