feat: ensure UserController returns 400 if no name is provided

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,13 +1,12 @@
 {
-  "extends":[
-    "airbnb-base",
-    "eslint:recommended",
-    "plugin:@typescript-eslint/eslint-recommended",
-    "plugin:@typescript-eslint/recommended"],
+  "extends":["standard-with-typescript"],
   "parserOptions": {
     "project":"./tsconfig.json"
   },
   "rules": {
-    "@typescript-eslint/strict-boolean-expressions":"off"
+    "@typescript-eslint/strict-boolean-expressions":"off",
+    "import/prefer-default-export": 0,
+    "eslint/explicit-module-boundary-types":0,
+    "class-methods-use-this":"off",
   }
 }
